src/com/company/yapl/YAPLParser.java
// Generated from YAPL.g4 by ANTLR 4.10.1

package com.company.yapl;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class YAPLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, MULTIPLICATION_OPERATOR=9, 
		DIVISION_OPERATOR=10, SUM_OPERATOR=11, REST_OPERATOR=12, SMALLER_THAN=13, 
		SMALLER_OR_EQUAL_THAN=14, EQUAL=15, PARENTHESIS_START=16, PARENTHESIS_END=17, 
		SELF=18, SELF_TYPE=19, IF=20, NEW=21, ISVOID=22, LET=23, IN=24, WHILE=25, 
		LOOP=26, POOL=27, ELSE=28, FI=29, THEN=30, INHERITS=31, NOT=32, TRUE=33, 
		FALSE=34, ASSIGN=35, CLASS=36, CLASS_LEXER=37, OBJ_TYPE=38, INT=39, COMMENT=40, 
		LINE_COMMENT=41, WS=42, Scope=43, StringCharacter=44;
	public static final int
		RULE_program = 0, RULE_class_grammar = 1, RULE_features = 2, RULE_type_grammar = 3, 
		RULE_class_function_declaration = 4, RULE_class_property_declaration = 5, 
		RULE_class_feature = 6, RULE_declaration = 7, RULE_declaration_with_possible_assignation = 8, 
		RULE_expr = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "class_grammar", "features", "type_grammar", "class_function_declaration", 
			"class_property_declaration", "class_feature", "declaration", "declaration_with_possible_assignation", 
			"expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "';'", "','", "':'", "'.'", "'~'", "'\"'", "'*'", 
			"'/'", "'+'", "'-'", "'<'", "'<='", "'='", "'('", "')'", "'self'", "'SELF_TYPE'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'true'", "'false'", "'<-'", null, null, null, null, null, null, 
			null, "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "MULTIPLICATION_OPERATOR", 
			"DIVISION_OPERATOR", "SUM_OPERATOR", "REST_OPERATOR", "SMALLER_THAN", 
			"SMALLER_OR_EQUAL_THAN", "EQUAL", "PARENTHESIS_START", "PARENTHESIS_END", 
			"SELF", "SELF_TYPE", "IF", "NEW", "ISVOID", "LET", "IN", "WHILE", "LOOP", 
			"POOL", "ELSE", "FI", "THEN", "INHERITS", "NOT", "TRUE", "FALSE", "ASSIGN", 
			"CLASS", "CLASS_LEXER", "OBJ_TYPE", "INT", "COMMENT", "LINE_COMMENT", 
			"WS", "Scope", "StringCharacter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YAPL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YAPLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends com.company.visitor.YAPLVisitorContext {
		public List<Class_grammarContext> class_grammar() {
			return getRuleContexts(Class_grammarContext.class);
		}
		public Class_grammarContext class_grammar(int i) {
			return getRuleContext(Class_grammarContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(20);
				class_grammar();
				}
				}
				setState(23); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_grammarContext extends com.company.visitor.YAPLVisitorContext {
		public Token className;
		public Token parent;
		public TerminalNode CLASS() { return getToken(YAPLParser.CLASS, 0); }
		public FeaturesContext features() {
			return getRuleContext(FeaturesContext.class,0);
		}
		public List<TerminalNode> CLASS_LEXER() { return getTokens(YAPLParser.CLASS_LEXER); }
		public TerminalNode CLASS_LEXER(int i) {
			return getToken(YAPLParser.CLASS_LEXER, i);
		}
		public TerminalNode INHERITS() { return getToken(YAPLParser.INHERITS, 0); }
		public Class_grammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_grammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterClass_grammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitClass_grammar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitClass_grammar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_grammarContext class_grammar() throws RecognitionException {
		Class_grammarContext _localctx = new Class_grammarContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_grammar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			match(CLASS);
			setState(26);
			((Class_grammarContext)_localctx).className = match(CLASS_LEXER);
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(27);
				match(INHERITS);
				setState(28);
				((Class_grammarContext)_localctx).parent = match(CLASS_LEXER);
				}
			}

			setState(31);
			match(T__0);
			setState(32);
			features();
			setState(33);
			match(T__1);
			setState(34);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeaturesContext extends com.company.visitor.YAPLVisitorContext {
		public List<Class_featureContext> class_feature() {
			return getRuleContexts(Class_featureContext.class);
		}
		public Class_featureContext class_feature(int i) {
			return getRuleContext(Class_featureContext.class,i);
		}
		public FeaturesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_features; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterFeatures(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitFeatures(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitFeatures(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeaturesContext features() throws RecognitionException {
		FeaturesContext _localctx = new FeaturesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_features);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OBJ_TYPE) {
				{
				{
				setState(36);
				class_feature();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_grammarContext extends com.company.visitor.YAPLVisitorContext {
		public TerminalNode CLASS_LEXER() { return getToken(YAPLParser.CLASS_LEXER, 0); }
		public TerminalNode SELF_TYPE() { return getToken(YAPLParser.SELF_TYPE, 0); }
		public Type_grammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_grammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterType_grammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitType_grammar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitType_grammar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_grammarContext type_grammar() throws RecognitionException {
		Type_grammarContext _localctx = new Type_grammarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_grammar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_la = _input.LA(1);
			if ( !(_la==SELF_TYPE || _la==CLASS_LEXER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_function_declarationContext extends com.company.visitor.YAPLVisitorContext {
		public Token id;
		public DeclarationContext param1;
		public DeclarationContext params;
		public Type_grammarContext return_type;
		public ExprContext body;
		public TerminalNode PARENTHESIS_START() { return getToken(YAPLParser.PARENTHESIS_START, 0); }
		public TerminalNode PARENTHESIS_END() { return getToken(YAPLParser.PARENTHESIS_END, 0); }
		public TerminalNode OBJ_TYPE() { return getToken(YAPLParser.OBJ_TYPE, 0); }
		public Type_grammarContext type_grammar() {
			return getRuleContext(Type_grammarContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Class_function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterClass_function_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitClass_function_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitClass_function_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_function_declarationContext class_function_declaration() throws RecognitionException {
		Class_function_declarationContext _localctx = new Class_function_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_function_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(44);
			((Class_function_declarationContext)_localctx).id = match(OBJ_TYPE);
			setState(45);
			match(PARENTHESIS_START);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OBJ_TYPE) {
				{
				setState(46);
				((Class_function_declarationContext)_localctx).param1 = declaration();
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(47);
					match(T__3);
					setState(48);
					((Class_function_declarationContext)_localctx).params = declaration();
					}
					}
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(56);
			match(PARENTHESIS_END);
			setState(57);
			match(T__4);
			setState(58);
			((Class_function_declarationContext)_localctx).return_type = type_grammar();
			setState(59);
			match(T__0);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__6) | (1L << T__7) | (1L << PARENTHESIS_START) | (1L << SELF) | (1L << IF) | (1L << NEW) | (1L << ISVOID) | (1L << LET) | (1L << WHILE) | (1L << NOT) | (1L << TRUE) | (1L << FALSE) | (1L << OBJ_TYPE) | (1L << INT))) != 0)) {
				{
				{
				setState(60);
				((Class_function_declarationContext)_localctx).body = expr(0);
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(T__1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_property_declarationContext extends com.company.visitor.YAPLVisitorContext {
		public Token id;
		public Type_grammarContext class_;
		public ExprContext value;
		public TerminalNode OBJ_TYPE() { return getToken(YAPLParser.OBJ_TYPE, 0); }
		public Type_grammarContext type_grammar() {
			return getRuleContext(Type_grammarContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(YAPLParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Class_property_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_property_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterClass_property_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitClass_property_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitClass_property_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_property_declarationContext class_property_declaration() throws RecognitionException {
		Class_property_declarationContext _localctx = new Class_property_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_class_property_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(68);
			((Class_property_declarationContext)_localctx).id = match(OBJ_TYPE);
			setState(69);
			match(T__4);
			setState(70);
			((Class_property_declarationContext)_localctx).class_ = type_grammar();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(71);
				match(ASSIGN);
				setState(72);
				((Class_property_declarationContext)_localctx).value = expr(0);
				}
			}

			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_featureContext extends com.company.visitor.YAPLVisitorContext {
		public Class_function_declarationContext class_function_declaration() {
			return getRuleContext(Class_function_declarationContext.class,0);
		}
		public Class_property_declarationContext class_property_declaration() {
			return getRuleContext(Class_property_declarationContext.class,0);
		}
		public Class_featureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterClass_feature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitClass_feature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitClass_feature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_featureContext class_feature() throws RecognitionException {
		Class_featureContext _localctx = new Class_featureContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_class_feature);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				class_function_declaration();
				setState(76);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				class_property_declaration();
				setState(79);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends com.company.visitor.YAPLVisitorContext {
		public Token id;
		public Type_grammarContext className;
		public TerminalNode OBJ_TYPE() { return getToken(YAPLParser.OBJ_TYPE, 0); }
		public Type_grammarContext type_grammar() {
			return getRuleContext(Type_grammarContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((DeclarationContext)_localctx).id = match(OBJ_TYPE);
			setState(84);
			match(T__4);
			setState(85);
			((DeclarationContext)_localctx).className = type_grammar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_with_possible_assignationContext extends com.company.visitor.YAPLVisitorContext {
		public Token id;
		public Type_grammarContext className;
		public TerminalNode OBJ_TYPE() { return getToken(YAPLParser.OBJ_TYPE, 0); }
		public Type_grammarContext type_grammar() {
			return getRuleContext(Type_grammarContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(YAPLParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Declaration_with_possible_assignationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_with_possible_assignation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).enterDeclaration_with_possible_assignation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YAPLListener ) ((YAPLListener)listener).exitDeclaration_with_possible_assignation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YAPLVisitor ) return ((YAPLVisitor<? extends T>)visitor).visitDeclaration_with_possible_assignation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_with_possible_assignationContext declaration_with_possible_assignation() throws RecognitionException {
		Declaration_with_possible_assignationContext _localctx = new Declaration_with_possible_assignationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaration_with_possible_assignation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			((Declaration_with_possible_assignationContext)_localctx).id = match(OBJ_TYPE);
			setState(88);
			match(T__4);
			setState(89);
			((Declaration_with_possible_assignationContext)_localctx).className = type_grammar();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(90);
				match(ASSIGN);
				setState(91);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
